--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@ Take advantage of exclusive deals and promotions to make your plant journey even
     <footer class="footer">
         <div class="social-links">
             <a href="https://www.facebook.com/" target="_blank" title="facebook">
-                <img src="facebook.PNG" alt="facebook">
+                <img src="facebook.png" alt="facebook">
             </a>
             <a href="https://www.instagram.com/" target="_blank" title="Instgram">
-                <img src="instagram.PNG" alt="instagram">
+                <img src="instagram.png" alt="instagram">
             </a>
             <a href="https://www.tiktok.com/en/" target="_blank" title="tiktok">
-                <img src="tiktok.PNG" alt="tiktok">
+                <img src="tiktok.png" alt="tiktok">
             </a>
         </div>
     </footer>
