changing style.css

--- a/index.html
+++ b/index.html
@@ -25,22 +25,18 @@
             <span id="span">Where nature meets nurture!</span> Explore our vibrant collection of exquisite plants, carefully curated to bring beauty and tranquility to your space. Whether you're a seasoned gardener or a budding plant enthusiast, our online nursery is your one-stop destination for all things green.<br>
 <br>
 
-🌿 <span id="span">Discover the Green Oasis:</span><br>
+<span id="span">Discover the Green Oasis:</span><br>
 Immerse yourself in a world of botanical wonders. From elegant succulents to lush tropical foliage, our diverse selection caters to every taste and style. Browse through our categories to find the perfect additions to your indoor or outdoor garden.<br><br>
 
-🌺 <span id="span">You Can Trust:</span> <br>
+<span id="span">You Can Trust:</span> <br>
 At [Your Plant Nursery Name], we prioritize quality and care. Each plant is nurtured with love and attention, ensuring that you receive only the healthiest and most vibrant specimens. Our commitment to excellence guarantees a thriving addition to your botanical haven.<br><br>
-
-🌱 <span id="span">Expert Advice, Just a Click Away:</span><br>
+<span id="span">Expert Advice, Just a Click Away:</span><br>
 Need guidance on plant care or landscaping ideas? Our team of experienced horticulturists is here to help. Explore our blog for insightful articles, care tips, and inspiration to help you cultivate a green paradise right at home.<br><br>
-
-🚚 <span id="span">Convenient Delivery:</span><br>
+<span id="span">Convenient Delivery:</span><br>
 Sit back and relax as we bring the beauty of nature to your doorstep. Our efficient and secure delivery ensures that your plants arrive in perfect condition, ready to transform your space into a sanctuary of greenery.<br><br>
-
-🌐 <span id="span">Sustainable Living:</span><br>
+<span id="span">Sustainable Living:</span><br>
 Join us in our commitment to environmental stewardship. Many of our plants are sourced sustainably, and we strive to minimize our ecological footprint. Experience the joy of gardening while contributing to a healthier planet.<br><br>
-
-🌟 <span id="span">Special Offers and Promotions:</span><br>
+<span id="span">Special Offers and Promotions:</span><br>
 Take advantage of exclusive deals and promotions to make your plant journey even more delightful. Sign up for our newsletter to stay updated on the latest arrivals, promotions, and gardening tips.
 <br><br>
 <span id="span">Transform </span> living spaces into a haven of natural beauty with [Your Plant Nursery Name]. Explore our collection, and let the journey to a greener, more vibrant life begin!<br><br>
