--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 Immerse yourself in a world of botanical wonders. From elegant succulents to lush tropical foliage, our diverse selection caters to every taste and style. Browse through our categories to find the perfect additions to your indoor or outdoor garden.<br><br>
 
 <span id="span">You Can Trust:</span> <br>
-At [Your Plant Nursery Name], we prioritize quality and care. Each plant is nurtured with love and attention, ensuring that you receive only the healthiest and most vibrant specimens. Our commitment to excellence guarantees a thriving addition to your botanical haven.<br><br>
+At Rosie's Nursery, we prioritize quality and care. Each plant is nurtured with love and attention, ensuring that you receive only the healthiest and most vibrant specimens. Our commitment to excellence guarantees a thriving addition to your botanical haven.<br><br>
 <span id="span">Expert Advice, Just a Click Away:</span><br>
 Need guidance on plant care or landscaping ideas? Our team of experienced horticulturists is here to help. Explore our blog for insightful articles, care tips, and inspiration to help you cultivate a green paradise right at home.<br><br>
 <span id="span">Convenient Delivery:</span><br>
@@ -39,7 +39,7 @@ Join us in our commitment to environmental stewardship. Many of our plants are s
 <span id="span">Special Offers and Promotions:</span><br>
 Take advantage of exclusive deals and promotions to make your plant journey even more delightful. Sign up for our newsletter to stay updated on the latest arrivals, promotions, and gardening tips.
 <br><br>
-<span id="span">Transform </span> living spaces into a haven of natural beauty with [Your Plant Nursery Name]. Explore our collection, and let the journey to a greener, more vibrant life begin!<br><br>
+<span id="span">Transform </span> living spaces into a haven of natural beauty with Rosie's Nursery. Explore our collection, and let the journey to a greener, more vibrant life begin!<br><br>
 
 🌿🌸🌳<br>
         </p>
