minor style changes

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ Join us in our commitment to environmental stewardship. Many of our plants are s
 <span id="span">Special Offers and Promotions:</span><br>
 Take advantage of exclusive deals and promotions to make your plant journey even more delightful. Sign up for our newsletter to stay updated on the latest arrivals, promotions, and gardening tips.
 <br><br>
-<span id="span">Transform </span> living spaces into a haven of natural beauty with Rosie's Nursery. Explore our collection, and let the journey to a greener, more vibrant life begin!<br><br>
-
+<span id="span">Transform </span> living spaces into a haven of natural beauty with Rosie's Nursery. Explore our collection, and let the journey to a greener, more vibrant life begin!<br><br></p>
+<p>
 🌿🌸🌳<br>
         </p>
     </article>
